--- a/package.json
+++ b/package.json
@@ -1,67 +1,39 @@
 {
-  "name": "gatsby-starter-gcn",
-  "description": "A starter template to build amazing static websites with Gatsby, Contentful and Netlify",
-  "version": "2.0.4",
-  "repository": "https://github.com/ryanwiemer/gatsby-starter-gcn",
-  "author": "Ryan Wiemer <ryan@ryanwiemer.com>",
-  "dependencies": {
-    "babel-plugin-styled-components": "^1.10.0",
-    "chalk": "^2.4.1",
-    "contentful-import": "^7.4.3",
-    "gatsby": "^2.0.73",
-    "gatsby-image": "^2.0.25",
-    "gatsby-plugin-canonical-urls": "^2.0.8",
-    "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-feed": "^2.0.11",
-    "gatsby-plugin-google-analytics": "^2.0.8",
-    "gatsby-plugin-manifest": "^2.0.12",
-    "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-nprogress": "^2.0.7",
-    "gatsby-plugin-offline": "^2.0.20",
-    "gatsby-plugin-react-helmet": "^3.0.4",
-    "gatsby-plugin-sitemap": "^2.0.3",
-    "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-remark-autolink-headers": "^2.0.12",
-    "gatsby-remark-images-contentful": "^2.0.5",
-    "gatsby-remark-prismjs": "^3.1.4",
-    "gatsby-source-contentful": "^2.0.20",
-    "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-remark": "^2.1.17",
-    "inquirer": "^6.2.1",
-    "lodash": "^4.17.11",
-    "moment": "^2.23.0",
-    "path": "^0.12.7",
-    "prismjs": "^1.15.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^4.1.3"
+  "name": "contentful-starter-gatsby-blog",
+  "description": "Contentful Gatsby Starter Blog",
+  "private": true,
+  "version": "0.0.1",
+  "author": "Contentful <opensource@contentful.com>",
+  "bugs": {
+    "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
+  "dependencies": {
+    "gatsby": "^1.9.277",
+    "gatsby-image": "^1.0.55",
+    "gatsby-link": "^1.6.46",
+    "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-plugin-sharp": "^1.6.46",
+    "gatsby-source-contentful": "^1.3.54",
+    "gatsby-transformer-remark": "^1.7.44",
+    "lodash": "^4.17.10"
+  },
+  "homepage": "https://github.com/contentful/starter-gatsby-blog#readme",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "contentful",
+    "starter"
   ],
   "license": "MIT",
   "main": "n/a",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "test": "npm run lint:css && npm run lint:js && npm run check-pretty",
-    "setup": "node ./bin/setup.js",
-    "dev": "gatsby develop",
-    "lint:js": "eslint --ext .js,.jsx .",
-    "lint:css": "stylelint 'src/**/*.js'",
-    "check-pretty": "prettier -l {,src/**/}*.{js,jsx,json,css,scss}",
-    "format": "prettier --write \"src/**/*.js\"",
-    "clean": "rm -rf public .cache"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/contentful/starter-gatsby-blog.git"
   },
-  "devDependencies": {
-    "eslint": "^5.10.0",
-    "eslint-config-gatsby-standard": "^2.1.1",
-    "prettier": "^1.15.3",
-    "stylelint": "9.9.0",
-    "stylelint-config-prettier": "^4.0.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.5.1"
+  "scripts": {
+    "dev": "gatsby develop",
+    "build": "gatsby build",
+    "heroku-postbuild": "gatsby build",
+    "serve": "gatsby serve",
+    "setup": "npm install --no-save contentful-import yargs-parser axios chalk && node ./setup.js"
   }
 }
